# assortment_selection_pricing

./: .gitignore  algorithms.py  experiments.py  main.sh  paper.mplstyle  pyproject.toml  run_experiments.sh  run_experiments_savio.sh  utility_ub_plot.py  view_results.ipynb
plots/: fixed_point_plot.ipynb  generate_plots.py  utility_ub_plot.py
src/assortment_pricing/: algorithms.py  baselines.py  utils.py
